--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,18 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=SomeRandomString
+APP_KEY=SomeString!!!
 
-DB_HOST=localhost
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+AWS_ACCESS_KEY_ID=replace
+AWS_SECRET_ACCESS_KEY=replace
+AWS_REGION=eu-west-1
+
+BOUNCES_SQS_URL=replace
+COMPLAINTS_SQS_URL=replace
+
+INTERSPIRE_URL=replace
+INTERSPIRE_USER=replace
+INTERSPIRE_TOKEN=replace
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
-
-MAIL_DRIVER=smtp
-MAIL_HOST=mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
